fix z-index issue

--- a/src/scss/vue-sidebar-menu.scss
+++ b/src/scss/vue-sidebar-menu.scss
@@ -10,6 +10,7 @@
     width: 100%;
     height: 100vh;
     padding-bottom: 50px;
+    z-index: 999;
     transition: 0.3s width;
     &.rtl {
       right: 0;
